--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+<filesMatch ".(css|jpg|jpeg|png|gif|js|ico)$">
+Header set Cache-Control "max-age=2592000, public"
+</filesMatch>
+
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
 ExpiresActive On
